# cricket-demo

./: .gitignore  db.sqlite3  hello.py  pyproject.toml  requirements.txt  todo
badminton/: asgi.py  settings.py  urls.py  wsgi.py
base/: models.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_player_dominant_hand_player_focus_player_gender.py
base/templates/base/: about.html  base.html  dashboard.html  demo.html  index.html  output.html
static/: full_matrics.csv
theme/static_src/: package-lock.json  package.json  tailwind.config.js
