[project]
name = "badminton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-stubs>=5.1.1",
    "django-tailwind>=3.8.0",
    "django>=5.1.3",
    "gunicorn>=23.0.0",
    "pillow>=11.0.0",
    "pip>=24.3.1",
    "whitenoise>=6.8.2",
]
